# university_outreach_workshop

./: 404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
docs/labs/: lab_01.md  lab_02.md  lab_03.md  lab_04.md  lab_05.md  lab_06.md  lab_07.md  pre_work.md
docs/pre-work/: readme.md
lab-1/readme/: index.html
lab-2/readme/: index.html
lab-3/readme/: index.html
lab_01/readme/: index.html
lab_02/readme/: index.html
lab_03/readme/: index.html
labs/: lab_01.ipynb  lab_02.ipynb  lab_03.ipynb  lab_04.ipynb  lab_05.ipynb  lab_06.ipynb  lab_07.py  lab_07_context.py
labs/data/: sales.csv
labs/lab_01/: index.html
labs/lab_02/: index.html
labs/lab_03/: index.html
labs/lab_04/: index.html
labs/lab_05/: index.html
labs/lab_06/: index.html
labs/lab_07/: index.html
labs/pre_work/: index.html
mellea_tutorials/: using_generative_slots.ipynb  your_first_generative_program.ipynb
pre-work/readme/: index.html
search/: search_index.json
