[project]
name = "university-outreach-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.58.0",
    "mellea>=0.1.3",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyter-black>=0.4.0",
    "jupyterlab>=4.4.10",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.22",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.14",
]
